--- a/metadata/md5-cache/app-crypt/euswi-1.3.1
+++ b/metadata/md5-cache/app-crypt/euswi-1.3.1
@@ -1,5 +1,5 @@
 BDEPEND=virtual/pkgconfig
-DEFINED_PHASES=install
+DEFINED_PHASES=install postinst prerm
 DEPEND=sys-apps/pcsc-lite
 DESCRIPTION=IIT End User CA-1. Sign (web)
 EAPI=8
@@ -11,4 +11,4 @@ RESTRICT=mirror strip test
 SLOT=0
 SRC_URI=https://iit.com.ua/download/productfiles/euswi.64.tar
 _eclasses_=toolchain-funcs	eed10cf5e5a06916e654d31f5a1925cc	multilib	c19072c3cd7ac5cb21de013f7e9832e0	udev	eec0bbab06977f1cfc5597269c1fa152
-_md5_=2a11073ec01034abdbb6ecf9103544bd
+_md5_=890017c19cf7c89ee25ad313c8dd2d1b
